--- a/Sunshine/Sunshine/app/build.gradle
+++ b/Sunshine/Sunshine/app/build.gradle
@@ -17,6 +17,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+
+    buildTypes.each {
+        it.buildConfigField 'String', 'OPEN_WEATHER_MAP_API_KEY', '"27275969a900a6bd0a7b4897185ee601"'
+    }
 }
 
 dependencies {
