--- a/Sunshine/Sunshine/app/src/main/AndroidManifest.xml
+++ b/Sunshine/Sunshine/app/src/main/AndroidManifest.xml
@@ -38,6 +38,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.android.vladulutz.sunshine.MainActivity" />
         </activity>
+        <provider
+            android:name=".data.WeatherProvider"
+            android:authorities="com.android.vladulutz.sunshine"
+            />
     </application>
 
 </manifest>
